--- a/resume/index.html
+++ b/resume/index.html
@@ -63,7 +63,7 @@
 
                                     With a solid foundation in Java and database design, I enjoy problem-solving and transforming ideas into working applications. My goal is to continue growing my skills in software development while contributing to projects that make a positive impact. Outside of coding, I enjoy exploring tech trends, participating in group projects, and continuously challenging myself to learn new things.
                                     
-                                    Let’s connect — I’m open to collaboration, learning opportunities, and exciting projects! </p>
+                                    Let’s connect, I’m open to collaboration, learning opportunities, and exciting projects! </p>
                                 </div>         
                             </div>  
                         </div>
