--- a/resume/index.html
+++ b/resume/index.html
@@ -87,6 +87,7 @@
                                                     <p class="timeline-text">Role: Developer <br>
                                                         • Designed and implemented a food ordering system for a local restaurant chain, handling multi-item orders, distance-based delivery charges, and a user-friendly interface.
                                                         </p>
+                                                    <img src="Screenshot 2025-05-17 101426.png" alt="">     
                                                 </div>
 
                                                 <div class="timeline-item">
@@ -96,7 +97,19 @@
                                                     <h4 class="timeline-title">Salon Booking System Project</h4>
                                                     <p class="timeline-text">Role: System Designer & Developer <br>
                                                         • Created a booking system using Java and arrays, featuring appointment management, file handling, and calculation features.</p>
+                                                    <img src="Screenshot 2025-05-17 100441.png" alt="">     
                                                 </div>
+
+                                                <div class="timeline-item">
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2024
+                                                    </h3>
+                                                    <h4 class="timeline-title">Meal Planner System Project</h4>
+                                                    <p class="timeline-text">Role: Developer <br>
+                                                        • Developed a desktop-based meal planning system using Java with GUI, allowing users to create, save, and manage personalized daily meal plans.</p>
+                                                    <img src="mealplanner.jpg" alt="">     
+                                                </div>
+
 
                                                 <div class="timeline-item">
                                                     <h3 class="timeline-date">
@@ -105,6 +118,7 @@
                                                     <h4 class="timeline-title">Health Tracker App</h4>
                                                     <p class="timeline-text">Role: App Developer <br>
                                                         • Developed a health tracker application focusing on user-related features such as exercise summaries and health monitoring to encourage better lifestyle habits.</p>
+                                                     <img src="Screenshot 2025-05-17 095916.png" alt="">    
                                                 </div>
 
                                                 <div class="timeline-item">
@@ -115,6 +129,7 @@
                                                     <p class="timeline-text">Role: System Designer <br>
                                                         • Designed a money tracker system with categorized income/expenses, receipt-style transaction views, and user-friendly navigation for personal finance management.
                                                         </p>
+                                                     <img src="Screenshot 2025-05-17 095655.png" alt="">   
                                                 </div>
 
                                                 <div class="timeline-item">
@@ -124,17 +139,19 @@
                                                     <h4 class="timeline-title">Cat Disease Detection Database</h4>
                                                     <p class="timeline-text">Role: Database Designer <br>
                                                         • Developed a relational database system to track symptoms and facilitate early disease detection in cats for veterinary clinics and shelters.</p>
+                                                    <img src="Screenshot 2025-05-17 094527.png" alt="">    
                                                 </div>
 
                                                 <div class="timeline-item">
                                                     <h3 class="timeline-date">
                                                         <i class="fa fa-calendar"></i> 2025
                                                     </h3>
-                                                    <h4 class="timeline-title">Preloved Items E-Commerce Website (2025)</h4>
+                                                    <h4 class="timeline-title">Preloved Items E-Commerce Website (In Progress)</h4>
                                                     <p class="timeline-text">Role: Web Designer & Developer <br>
                                                         • Recently built a preloved online platform to promote sustainable shopping, featuring user listings, product categories, and an engaging interface to encourage second-hand buying and selling
                                                         .
                                                         </p>
+                                                     <img src="Screenshot 2025-05-17 095231.png" alt="">    
                                                 </div>
 
                                             </div>
